[package]
name = "pythia"
version = "0.1.0"
authors = ["Emre Ates <ates@bu.edu>"]
default-run = "pythia"
edition = "2018"

[dependencies]
redis = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
petgraph = { version = "*", features = ["serde-1"] }
clap = "*"
config = "*"
hex = "*"
rust-crypto = "*"
streaming-stats = "*"
lazy_static = "*"
indexmap = "*"
jsonrpc-core = "*"
jsonrpc-core-client = "*"
jsonrpc-client-transports = "*"
hyper = "0.12"
jsonrpc-derive = "*"
jsonrpc-http-server = "*"
futures = "~0.1.6"
dirs = "*"
regex = "*"
byteorder = "*"
bimap = "*"
genawaiter = "*"
itertools = "*"
