[package]
name = "pythia"
version = "1.0.0"
authors = ["Emre Ates", "Mert Toslali", "Alex Ellis", "Zhaoqi Zhang", "Darby Huye", "Lan Liu", "Samantha Puterman", "Ayse K. Coskun", "Raja R. Sambasivan"]
edition = "2022"
default-run = "pythia"
license = "BSD-2-Clause"

[dependencies]
pythia_common = { path = "./pythia_common" }
redis = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "0.7"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
petgraph = { version = "*", features = ["serde-1"] }
clap = "*"
hex = "*"
rust-crypto = "*"
streaming-stats = "*"
histogram = "0.6.9"
lazy_static = "*"
indexmap = "*"
jsonrpc-core = "*"
jsonrpc-core-client = "*"
jsonrpc-client-transports = "*"
hyper = "0.12"
futures = "~0.1.6"
dirs = "*"
regex = "*"
byteorder = "*"
bimap = "*"
genawaiter = "*"
itertools = "*"
config = "*"
threadpool = "*"
[target.'cfg(target_os = "linux")'.dependencies]
procinfo = "*"