[package]
name = "pythia_common"
version = "0.1.0"
authors = ["Emre Ates <ates@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
config = "*"
