[package]
name = "pythia_common"
version = "1.0.0"
authors = ["Emre Ates <ates@bu.edu>"]
edition = "2022"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "*"
serde = {version = "1.0", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
