[package]
name = "pythia_server"
version = "1.0.0"
authors = ["Emre Ates", "Mert Toslali", "Alex Ellis", "Zhaoqi Zhang", "Darby Huye", "Lan Liu", "Samantha Puterman", "Ayse K. Coskun", "Raja R. Sambasivan"]
edition = "2018"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "*"
pythia_common = { path = "../pythia_common" }
serde_json = "*"
jsonrpc-core = "*"
jsonrpc-derive = "*"
jsonrpc-http-server = "*"
procfs = "*"
uuid = { version = "*", features = ["v4", "serde"] }
config = "*"
chrono = { version = "*", features = ["serde"] }
